# KroneckerBinEdgeListToCSR

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
playground/: graph_stats.cpp  kron_converter.cpp  test_primitive.cpp
reordering_utils/: pkc_reorder_refactor.cpp  reorder_utils.cpp
util/graph/: graph.cpp  graph.h  pre_processing.h  pre_processing_dodg.h  triangle_counting.h
util/primitives/: primitives.h
util/search/: search_util.h
util/serialization/: histogram_stats.h
